--- a/index.html
+++ b/index.html
@@ -3,55 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for Ancha Bot</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Privacy Policy</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
-        h1, h2 { color: #333366; }
-        p { margin-bottom: 15px; }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 1.8em;
+            margin-bottom: 10px;
+        }
+        h3 {
+            font-size: 1.5em;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+        p {
+            margin: 10px 0;
+        }
+        .footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #888;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for Ancha Bot</h1>
-    <p><strong>Effective Date:</strong> 10.December 2024</p>
 
-    <h2>1. Data We Collect</h2>
-    <p>We collect the following information when you interact with the bot:</p>
+<div class="container">
+    <h1>Privacy Policy</h1>
+
+    <p><strong>Effective Date:</strong> 14.12.2024]</p>
+
+    <p>This Privacy Policy explains how Anchabot ("we," "our," or "us") collects, uses, and protects your personal data when you interact with our Telegram bot (the "Service"). We are committed to complying with the General Data Protection Regulation (GDPR) and other applicable data protection laws.</p>
+
+    <hr>
+
+    <h2>1. Data Controller</h2>
+    <p>For the purposes of the GDPR, the Data Controller is:</p>
+    <p><strong>ConexMedia</strong><br>
+    ConexMediaCorp.<br>
+    Email: conexmediacorp@gmail.com</p>
+
+    <h2>2. Data We Collect</h2>
+    <p>When you interact with the Service, we may collect the following personal data:</p>
     <ul>
-        <li>Telegram User ID and Username.</li>
-        <li>Chat history, including messages you send to the bot and the bot's responses.</li>
-        <li>Any media (e.g., photos, files) you share with the bot.</li>
+        <li><strong>Telegram User Data:</strong> Your Telegram username, user ID, and profile picture (if available).</li>
+        <li><strong>Messages:</strong> The content of your messages, including text, photos, and other files you send to the bot.</li>
+        <li><strong>Chat History:</strong> A limited history of your conversations (e.g., the last 5 messages) stored to improve interaction quality.</li>
+        <li><strong>Metadata:</strong> Information such as timestamps and message IDs for operational purposes.</li>
+    </ul>
+    <p>We do not collect sensitive personal data unless explicitly provided by you during your interaction with the bot.</p>
+
+    <h2>3. How We Use Your Data</h2>
+    <p>Your data is processed for the following purposes:</p>
+    <ul>
+        <li>To provide chatbot services, including generating responses and personalizing interactions.</li>
+        <li>To improve the Service’s functionality, including troubleshooting and development.</li>
+        <li>To send images or other media upon request.</li>
+        <li>To ensure compliance with applicable laws and prevent misuse of the Service.</li>
     </ul>
 
-    <h2>2. Purpose of Data Collection</h2>
-    <p>We use your data to:</p>
+    <h2>4. Legal Basis for Processing</h2>
+    <p>We process your data based on the following legal grounds:</p>
     <ul>
-        <li>Provide and improve the bot's responses.</li>
-        <li>Personalize your experience with the bot.</li>
-        <li>Maintain service performance and debug issues.</li>
+        <li><strong>Consent:</strong> By using the Service, you consent to the processing of your data for chatbot interactions.</li>
+        <li><strong>Legitimate Interest:</strong> To improve and maintain the Service’s quality and functionality.</li>
+    </ul>
+    <p>You may withdraw your consent at any time by discontinuing your use of the Service or requesting deletion of your data (see Section 8).</p>
+
+    <h2>5. Data Sharing</h2>
+    <p>We do not sell or share your personal data with third parties except in the following cases:</p>
+    <ul>
+        <li><strong>Service Providers:</strong> We use third-party services such as OpenAI (for GPT-based responses) and MongoDB (for data storage). These providers process data on our behalf and comply with GDPR.</li>
+        <li><strong>Legal Obligations:</strong> If required by law, we may disclose your data to authorities or law enforcement agencies.</li>
     </ul>
 
-    <h2>3. How We Store Your Data</h2>
-    <p>Your data is securely stored in a MongoDB database hosted on MongoDB. We implement standard security practices to protect your information.</p>
-
-    <h2>4. Data Sharing</h2>
-    <p>We do not sell or share your data with third parties, except:</p>
+    <h2>6. Data Retention</h2>
+    <p>We retain your data only for as long as necessary to fulfill the purposes outlined in this Privacy Policy:</p>
     <ul>
-        <li>OpenAI API: For generating responses based on your messages. OpenAI processes the data temporarily and does not retain it.</li>
-        <li>Legal Obligations: If required by law to disclose your information.</li>
+        <li><strong>Chat History:</strong> A limited chat history (e.g., last 5 messages) is stored temporarily and may be retained for a maximum of 90 days.</li>
+        <li><strong>Message Logs:</strong> Messages and metadata are stored for up to 90 days to improve service quality and resolve issues.</li>
     </ul>
+    <p>You can request deletion of your data at any time (see Section 8).</p>
 
-    <h2>5. Data Retention</h2>
-    <p>We retain your chat history for [state duration, e.g., 30 days] to improve the bot's performance and user experience. After this period, your data is anonymized or deleted.</p>
-
-    <h2>6. User Rights</h2>
-    <p>You have the right to:</p>
+    <h2>7. Data Security</h2>
+    <p>We implement appropriate technical and organizational measures to protect your data, including:</p>
     <ul>
-        <li>Request a copy of the data we store about you.</li>
-        <li>Request data deletion by contacting us.</li>
+        <li>Secure storage using MongoDB with access controls.</li>
+        <li>Encrypted communication with OpenAI APIs.</li>
+        <li>Regular monitoring and updates to ensure data security.</li>
     </ul>
+    <p>However, no system is entirely secure, and we cannot guarantee the absolute security of your data.</p>
 
-    <h2>7. Contact Information</h2>
-    <p>If you have any questions about this Privacy Policy, contact us at:</p>
-    <p><strong>conexmediacorp@gmail.com</strong></p>
+    <h2>8. Your Rights</h2>
+    <p>Under the GDPR, you have the following rights:</p>
+    <ul>
+        <li><strong>Access:</strong> Request a copy of the data we hold about you.</li>
+        <li><strong>Correction:</strong> Request corrections to inaccurate or incomplete data.</li>
+        <li><strong>Deletion:</strong> Request the deletion of your data (“right to be forgotten”).</li>
+        <li><strong>Restriction:</strong> Request restriction of processing under certain conditions.</li>
+        <li><strong>Objection:</strong> Object to data processing based on legitimate interests.</li>
+        <li><strong>Data Portability:</strong> Request your data in a structured, commonly used format.</li>
+        <li><strong>Withdraw Consent:</strong> Withdraw your consent to data processing at any time.</li>
+    </ul>
+    <p>To exercise these rights, contact us at conexmediacorp@gmail.com. We will respond within 30 days.</p>
+
+    <h2>9. Data Transfers</h2>
+    <p>Data processed by OpenAI or stored in MongoDB may be transferred outside the European Economic Area (EEA). We ensure that such transfers comply with GDPR by using providers with adequate safeguards (e.g., Standard Contractual Clauses).</p>
+
+    <h2>10. Children’s Privacy</h2>
+    <p>The Service is not intended for children under the age of 16. We do not knowingly collect data from children. If you believe we have collected data from a child, contact us immediately to delete it.</p>
+
+    <h2>11. Updates to This Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time to reflect changes in the Service or legal requirements. We encourage you to review this policy periodically. Significant changes will be communicated via Telegram or other appropriate means.</p>
+
+    <h2>12. Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, contact us at:</p>
+    <p>Email: conexmediacorp@gmail.com]<br>
+    ConexMedia</p>
+</div>
+
+<div class="footer">
+    <p>&copy; 2024 ConexMediaCorp. All rights reserved.</p>
+</div>
+
 </body>
 </html>
