--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <h2>1. Data Controller</h2>
     <p>For the purposes of the GDPR, the Data Controller is:</p>
-    <p><strong>ConexMedia</strong><br>
-    ConexMediaCorp.<br>
+    <p><strong>ConexMedia Corp.</strong><br>
+    ConexMedia<br>
     Email: conexmediacorp@gmail.com</p>
 
     <h2>2. Data We Collect</h2>
@@ -140,7 +140,7 @@
 
     <h2>12. Contact Us</h2>
     <p>If you have any questions or concerns about this Privacy Policy, contact us at:</p>
-    <p>Email: conexmediacorp@gmail.com]<br>
+    <p>Email: conexmediacorp@gmail.com<br>
     ConexMedia</p>
 </div>
 
