--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="container">
     <h1>Privacy Policy</h1>
 
-    <p><strong>Effective Date:</strong> 14.12.2024]</p>
+    <p><strong>Effective Date:</strong> 14.12.2024</p>
 
     <p>This Privacy Policy explains how Anchabot ("we," "our," or "us") collects, uses, and protects your personal data when you interact with our Telegram bot (the "Service"). We are committed to complying with the General Data Protection Regulation (GDPR) and other applicable data protection laws.</p>
 
