--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p>Welcome to <strong>Anchabot</strong>, operated by <strong>ConexMedia</strong>. Your privacy is important to us, and we are committed to protecting your personal data. This policy explains how we collect, use, and protect your data in compliance with the <strong>General Data Protection Regulation (GDPR)</strong> and other applicable data protection laws worldwide.</p>
+    <p>Welcome to <strong>Bethildabot</strong>, operated by <strong>ClonexAI</strong>. Your privacy is important to us, and we are committed to protecting your personal data. This policy explains how we collect, use, and protect your data in compliance with the <strong>General Data Protection Regulation (GDPR)</strong> and other applicable data protection laws worldwide.</p>
 
     <h2>1. Data We Collect</h2>
-    <p>When you interact with <strong>Anchabot</strong>, we may collect the following data:</p>
+    <p>When you interact with <strong>Bethildabot</strong>, we may collect the following data:</p>
     <ul>
       <li><strong>User Information:</strong> Your Telegram username, user ID, and messages.</li>
       <li><strong>Payment Data:</strong> Payment details provided via <a href="https://stripe.com/privacy" target="_blank">Stripe</a> for purchases. Note that we do not store payment card details; Stripe handles this information securely.</li>
@@ -47,7 +47,7 @@
     </ul>
 
     <h2>2. How We Use Your Data</h2>
-    <p>Your data is used to provide, improve, and personalize the services offered by <strong>Anchabot</strong>. Specifically, we use your data for:</p>
+    <p>Your data is used to provide, improve, and personalize the services offered by <strong>Bethildabot</strong>. Specifically, we use your data for:</p>
     <ul>
       <li>Generating responses and enhancing interaction quality.</li>
       <li>Storing payment and usage history to manage subscriptions or credits.</li>
@@ -96,10 +96,10 @@
     <p>We may update this privacy policy from time to time. Changes will be posted on this page, and significant updates will be communicated via Telegram or other means.</p>
 
     <h2>11. Contact Us</h2>
-    <p>If you have questions or concerns about this privacy policy or how your data is handled, please contact <strong>ConexMedia</strong> via:</p>
+    <p>If you have questions or concerns about this privacy policy or how your data is handled, please contact <strong>ClonexAI</strong> via:</p>
     <ul>
-      <li>Email: <a href="mailto:conexmediacorp@gmail.com">conexmediacorp@gmail.com</a></li>
-      <li>Telegram: Contact us directly through the Anchabot interface.</li>
+      <li>Email: <a href="mailto:clonexaitech@gmail.com">ClonexAiTech@gmail.com</a></li>
+      <li>Telegram: Contact us directly through the Bethildabot interface.</li>
     </ul>
   </div>
 </body>
