--- a/index.html
+++ b/index.html
@@ -38,68 +38,95 @@
     <p>Welcome to <strong>Bethildabot</strong>, operated by <strong>ClonexAI</strong>. Your privacy is important to us, and we are committed to protecting your personal data. This policy explains how we collect, use, and protect your data in compliance with the <strong>General Data Protection Regulation (GDPR)</strong> and other applicable data protection laws worldwide.</p>
 
     <h2>1. Data We Collect</h2>
-    <p>When you interact with <strong>Bethildabot</strong>, we may collect the following data:</p>
+    <p>When you interact with <strong>Bethildabot</strong>, we collect and process the following data:</p>
     <ul>
-      <li><strong>User Information:</strong> Your Telegram username, user ID, and messages.</li>
-      <li><strong>Payment Data:</strong> Payment details provided via <a href="https://stripe.com/privacy" target="_blank">Stripe</a> for purchases. Note that we do not store payment card details; Stripe handles this information securely.</li>
-      <li><strong>Chat History:</strong> We store your conversation history to improve the bot's responses and user experience.</li>
-      <li><strong>Metadata:</strong> Non-identifiable data such as timestamps of messages and interactions.</li>
+      <li><strong>User Information:</strong> Your Telegram username, user ID, first name (if provided), and messages.</li>
+      <li><strong>Payment Data:</strong> Payment details processed via <a href="https://stripe.com/privacy" target="_blank">Stripe</a> for minute purchases. We store only transaction records, not payment card details.</li>
+      <li><strong>Chat History:</strong> Messages, voice messages (transcribed), photos, videos, and other media you share.</li>
+      <li><strong>Usage Data:</strong> Session times, activity timestamps, and minute balance information.</li>
+      <li><strong>Voice Data:</strong> Voice messages are processed through OpenAI's Whisper for transcription and ElevenLabs for voice responses.</li>
     </ul>
 
     <h2>2. How We Use Your Data</h2>
-    <p>Your data is used to provide, improve, and personalize the services offered by <strong>Bethildabot</strong>. Specifically, we use your data for:</p>
+    <p>Your data is used to provide and improve <strong>Bethildabot</strong> services:</p>
     <ul>
-      <li>Generating responses and enhancing interaction quality.</li>
-      <li>Storing payment and usage history to manage subscriptions or credits.</li>
-      <li>Detecting and preventing fraud or misuse of our services.</li>
+      <li>Generating personalized AI responses using OpenAI's technology.</li>
+      <li>Processing and managing your minute balance and payments.</li>
+      <li>Tracking session times and activity for billing purposes.</li>
+      <li>Storing conversation history to maintain context and improve responses.</li>
+      <li>Converting voice messages to text and generating voice responses.</li>
+      <li>Detecting and preventing fraudulent activities.</li>
     </ul>
 
     <h2>3. Payment Information</h2>
-    <p>Payments for credits or services are processed securely through <a href="https://stripe.com/privacy" target="_blank">Stripe</a>. Please note that:</p>
+    <p>Payments are processed securely through <a href="https://stripe.com/privacy" target="_blank">Stripe</a>:</p>
     <ul>
-      <li>All payments are <strong>non-refundable</strong>, as they pertain to digital goods and services.</li>
-      <li>Your payment details are processed directly by Stripe and are not stored on our servers.</li>
+      <li>Available packages: $10 (10 min), $20 (25 min), $50 (75 min), $100 (170 min).</li>
+      <li>All payments are <strong>non-refundable</strong> as they pertain to digital services.</li>
+      <li>New users receive 30 free minutes upon registration.</li>
+      <li>Payment processing is handled entirely by Stripe; we never see or store your card details.</li>
     </ul>
 
     <h2>4. Data Storage</h2>
-    <p>We store data securely using <a href="https://www.mongodb.com/legal/privacy-policy" target="_blank">MongoDB</a>. Your data is encrypted and protected against unauthorized access.</p>
+    <p>We use <a href="https://www.mongodb.com/legal/privacy-policy" target="_blank">MongoDB</a> to store your data securely:</p>
+    <ul>
+      <li>User profiles and preferences</li>
+      <li>Message history and interaction data</li>
+      <li>Payment records and minute balances</li>
+      <li>Session and activity timestamps</li>
+    </ul>
 
     <h2>5. Data Retention</h2>
-    <p>Your chat history and user data are stored for as long as necessary to provide our services or comply with legal obligations. You can request the deletion of your data at any time by contacting us via Telegram or email.</p>
+    <p>We retain your data as follows:</p>
+    <ul>
+      <li>Chat history: Stored for the duration of your account activity</li>
+      <li>Payment records: Kept for legal compliance and accounting purposes</li>
+      <li>Usage data: Maintained for service improvement and security</li>
+      <li>Voice messages: Transcribed and stored as text; original audio files are not retained</li>
+    </ul>
 
     <h2>6. Your Rights</h2>
-    <p>As a user, you have the following rights under GDPR and other applicable data protection laws:</p>
+    <p>Under GDPR and other applicable laws, you have the right to:</p>
     <ul>
-      <li>The right to access the personal data we hold about you.</li>
-      <li>The right to request correction of inaccurate data.</li>
-      <li>The right to request the deletion of your data.</li>
-      <li>The right to withdraw consent to data processing.</li>
-      <li>The right to lodge a complaint with a data protection authority.</li>
+      <li>Access your personal data</li>
+      <li>Correct inaccurate data</li>
+      <li>Request data deletion</li>
+      <li>Withdraw consent to data processing</li>
+      <li>Export your data in a portable format</li>
+      <li>Lodge complaints with relevant authorities</li>
     </ul>
 
     <h2>7. Third-Party Services</h2>
-    <p>We rely on the following third-party services, which have their own privacy policies:</p>
+    <p>We integrate with the following services, each with their own privacy policies:</p>
     <ul>
-      <li><a href="https://telegram.org/privacy" target="_blank">Telegram</a> (for bot operation).</li>
-      <li><a href="https://stripe.com/privacy" target="_blank">Stripe</a> (for payment processing).</li>
-      <li><a href="https://www.mongodb.com/legal/privacy-policy" target="_blank">MongoDB</a> (for data storage).</li>
-      <li><a href="https://openai.com/policies/privacy-policy" target="_blank">OpenAI</a> (for AI-powered responses).</li>
+      <li><a href="https://telegram.org/privacy" target="_blank">Telegram</a> - Bot platform and messaging</li>
+      <li><a href="https://stripe.com/privacy" target="_blank">Stripe</a> - Payment processing</li>
+      <li><a href="https://www.mongodb.com/legal/privacy-policy" target="_blank">MongoDB</a> - Data storage</li>
+      <li><a href="https://openai.com/policies/privacy-policy" target="_blank">OpenAI</a> - AI responses and voice transcription</li>
+      <li><a href="https://elevenlabs.io/privacy" target="_blank">ElevenLabs</a> - Voice generation</li>
     </ul>
 
     <h2>8. Data Security</h2>
-    <p>We implement robust security measures to protect your data from unauthorized access, alteration, or disclosure. However, no system can be completely secure. Use our services at your own risk.</p>
+    <p>We implement comprehensive security measures:</p>
+    <ul>
+      <li>Encrypted data storage and transmission</li>
+      <li>Regular security audits and updates</li>
+      <li>Strict access controls and authentication</li>
+      <li>Automated threat detection and prevention</li>
+      <li>Regular backups and disaster recovery procedures</li>
+    </ul>
 
-    <h2>9. Children’s Privacy</h2>
-    <p>This service is not intended for users under the age of 16. We do not knowingly collect data from children. If we become aware that we have collected personal data from a child, we will delete it promptly.</p>
+    <h2>9. Children's Privacy</h2>
+    <p>Our service is not intended for users under 18 years of age. We do not knowingly collect or store data from children. If we discover we have collected personal data from a child under 16, we will promptly delete it.</p>
 
     <h2>10. Changes to This Policy</h2>
-    <p>We may update this privacy policy from time to time. Changes will be posted on this page, and significant updates will be communicated via Telegram or other means.</p>
+    <p>We may update this privacy policy periodically. Significant changes will be communicated through our Telegram bot and this page. Continued use of our service after changes constitutes acceptance of the updated policy.</p>
 
     <h2>11. Contact Us</h2>
-    <p>If you have questions or concerns about this privacy policy or how your data is handled, please contact <strong>ClonexAI</strong> via:</p>
+    <p>For questions or concerns about your privacy and data:</p>
     <ul>
       <li>Email: <a href="mailto:clonexaitech@gmail.com">ClonexAiTech@gmail.com</a></li>
-      <li>Telegram: Contact us directly through the Bethildabot interface.</li>
+      <li>Telegram: Contact us directly through the Bethildabot interface</li>
     </ul>
   </div>
 </body>
