--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p>Welcome to <strong>Bethildabot</strong>, operated by <strong>ClonexAI</strong>. Your privacy is important to us, and we are committed to protecting your personal data. This policy explains how we collect, use, and protect your data in compliance with the <strong>General Data Protection Regulation (GDPR)</strong> and other applicable data protection laws worldwide.</p>
+    <p>Welcome to <strong>Bethildabot</strong>, operated by <strong>ClonexAI</strong>. Your privacy is important to us, and we are committed to protecting your personal data. This policy explains how we collect, use, and protect your data in compliance with the <strong>General Data Protection Regulation (GDPR)</strong> and other applicable data protection laws worldwide. Please note that this service is strictly for users 18 years of age or older.</p>
 
     <h2>1. Data We Collect</h2>
     <p>When you interact with <strong>Bethildabot</strong>, we collect and process the following data:</p>
@@ -117,7 +117,7 @@
     </ul>
 
     <h2>9. Children's Privacy</h2>
-    <p>Our service is not intended for users under 18 years of age. We do not knowingly collect or store data from children. If we discover we have collected personal data from a child under 16, we will promptly delete it.</p>
+    <p>Our service is strictly intended for users who are 18 years of age or older. We do not knowingly collect or store data from individuals under 18 years of age. If we discover we have collected personal data from someone under 18, we will promptly delete it. By using our service, you confirm that you are at least 18 years old.</p>
 
     <h2>10. Changes to This Policy</h2>
     <p>We may update this privacy policy periodically. Significant changes will be communicated through our Telegram bot and this page. Continued use of our service after changes constitutes acceptance of the updated policy.</p>
